# flow_eggroll

./: .gitignore  README.md  pyproject.toml  run_pixelart_eggroll.sh  run_sd3_eggroll.sh  run_sd3_eggroll_2gpu.sh  run_sd3_eggroll_2gpu_pickscore.sh  run_sd3_eggroll_2gpu_test.sh  wandb_data_extract.py
src/: train_sd3.py
src/config/: base.py  config.py
src/noiser/: base_noiser.py  eggroll.py
src/trash/: train_pixelart.py
